# VibeSpace

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  COMPLETE_ARCHITECTURE.md  DEVLOG.md  DOWNLOAD.md  LICENSE  PROGRESS_model-access-and-ui.md  PROGRESS_v0.1.3.md  README.md  SECURITY.md  SETUP.md  Setup_Guide_0.1.3.html  package-lock.json  package.json
.cursor/commands/: goal.md
.cursor/rules/: agent-coordination.mdc  opencode-response-format.mdc
.github/workflows/: ci.yml  pages.yml  release.yml
app/: index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
app/scripts/: crop-app-icon.py  sync-public-icons.mjs  verify-app-icons.py
app/src/: App.tsx  main.tsx  vite-env.d.ts
app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: README.md  icon.icns
app/src-tauri/src/: agent_coordination.rs  branding.rs  branding_windows.rs  credentials.rs  dictation.rs  faster_whisper.rs  fsread.rs  kokoro.rs  launcher.rs  lib.rs  local_ai.rs  main.rs  ollama_http.rs  terminal.rs
app/supabase/: README.md
benchmarks/vibebench/: README.md  simulate-hive-topologies.mjs
docs/: 01-product-vision.md  02-system-architecture.md  03-multi-agent-orchestration.md  04-voice-jarvis-layer.md  05-ui-ux-design.md  06-todo-scheduler-notifications.md  07-differentiation-strategy.md  08-tech-stack-decisions.md  09-jarvis-calling-account-release.md  10-voice-subscription-system.md  AGENT_COORDINATION.md  AGENT_TESTING_GUIDE.md  HIVE.md  HIVE_PIPELINE_SIMULATION_TIERS.md  SESSION_WORKLOG.md  SUBSCRIPTION_PLANS_REFERENCE.md  TERMINAL_AGENT_SYSTEM_OPTIONS.md  TERMINAL_PERSISTENCE_SHUTDOWN_UPDATE_TRAY.md  TRUST_AND_WINDOWS.md  VIBE_HIVE.md  security-production-checklist.md  stripe-setup.md  supabase-setup.md  twilio-calling-setup.md
docs/plans/: AI_CREDIT_BUCKET_AND_ULTRA_TIER.md  SUBSCRIPTION_QUOTA_SLIDERS_AND_PAYG.md
implementation-plan/: 00-phased-plan.md
implementation-plan/v2/: DELTAS.md  MASTER-PLAN.md  plan-A-ux.md  plan-B1-security-installer.md  plan-B2-providers-agents-schedule.md  plan-C-terminals.md  plan-D-launcher-media.md  plan-E-ambient-home.md  verify-X1-consistency.md  verify-X2-security.md
install/: install.ps1  install.sh
landing/: index.html  styles.css
phone-jarvis/: IMPLEMENTATION.md  README.md
phone-jarvis/cloud/: .env.example  Dockerfile  README.md  audit.py  auth.py  bridge.py  bridge_endpoint.py  config.py  fly.toml  livekit_handler.py  main.py  outbound.py  pipeline.py  requirements.txt  supabase_client.py  twilio_handler.py
phone-jarvis/docs/: 01-product-vision.md  02-architecture.md  03-call-flow.md  04-laptop-bridge.md  05-providers-and-cost.md  06-security.md  07-free-vs-paid-comparison.md  08-multi-user-and-jarvis-integration.md
phone-jarvis/implementation-plan/: 00-phased-plan.md
releases/: .gitignore  README.md  RELEASE_NOTES_0.1.25.md  RELEASE_NOTES_0.1.26.md  RELEASE_NOTES_0.1.27.md  RELEASE_NOTES_0.1.29.md  RELEASE_NOTES_0.1.30.md  RELEASE_NOTES_0.1.31.md  RELEASE_NOTES_0.1.32.md  RELEASE_NOTES_0.1.33.md  RELEASE_NOTES_0.1.34.md  RELEASE_NOTES_0.1.35.md  RELEASE_NOTES_0.1.36.md  RELEASE_NOTES_0.1.37.md  RELEASE_NOTES_0.1.38.md  RELEASE_NOTES_0.1.39.md  RELEASE_NOTES_0.1.40.md  RELEASE_NOTES_0.1.41.md  RELEASE_NOTES_0.1.42.md  RELEASE_NOTES_0.1.44.md  RELEASE_NOTES_0.1.45.md  RELEASE_NOTES_0.1.5.md  SHA256SUMS.txt  channel.json  latest.json
releases/manifests/: v0.1.38.json  v0.1.39.json  v0.1.40.json  v0.1.41.json  v0.1.42.json  v0.1.43.json  v0.1.44.json  v0.1.45.json
research/: 01-bridgemind-analysis.md  02-multi-agent-orchestration.md  03-voice-assistant-tech.md  04-competitive-landscape.md  05-ui-ux-trends.md
scripts/: auto-release-v0.1.45.ps1  build-updater-manifest.mjs  build-updater-manifest.test.mjs  dev-desktop.ps1  release-windows.ps1  rollback-update.ps1  sign-windows.ps1  verify-release-checksum.ps1  vibebench-run.mjs
site/: 404.html  index.html  install.ps1  install.sh  landing.html
supabase/: .gitignore  README.md  config.toml  schema-phone-jarvis.sql
supabase/functions/: README.md
supabase/migrations/: 0001_core_identity_billing.sql  0001_init.sql  0002_phone_jarvis.sql  0003_workspace_app_entities.sql  0004_billing_stripe.sql  0005_models_catalog.sql  0006_signup_trigger.sql  0007_security_hardening.sql  0008_revoke_anon_rpc.sql  0009_perf_rls_initplan_and_indexes.sql  0010_app_sync_records.sql  0011_plugin_connections.sql  0012_voice_subscription.sql  0013_message_call_budgets.sql  0014_unify_voice_call_budget.sql  0015_protect_billing_columns.sql  0016_fix_function_search_path.sql  0017_advisor_hardening.sql  0018_app_admins.sql  0019_deepgram_launch_promo.sql  0020_security_voice_promo_hardening.sql  0021_subscription_plan_v2.sql  0022_launch_rewards_program.sql  0023_promo_launch_finalize.sql  (+4 more)
(+559 files in other folders)
