[package]
name = "jarvis"
version = "0.1.21"
description = "The AI workspace where every model, agent, voice, and task lives under one persistent memory and one always-available assistant."
authors = ["Jarvis"]
edition = "2021"
rust-version = "1.78"

# We compile to a library so mobile platforms can link the entry point through
# their platform frameworks. Desktop binaries also link this lib via main.rs.
[lib]
name = "jarvis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PTY terminal backend (slice 1 of Wave 4 — multi-pane terminal grid).
# `portable-pty` gives us a single API across ConPTY (Windows 10 1809+) and
# the Unix forkpty path; `nanoid` is used for short opaque session ids.
portable-pty = "0.8"
nanoid = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

# Default development profile – optimise compile times.
[profile.dev]
incremental = true

# Production profile – Tauri's recommended settings for smaller, faster bundles.
#
# We use `thin` LTO and 4 codegen-units instead of `lto=true` + `codegen-units=1`
# because:
#   - Thin LTO gives us the bulk of the size/perf wins (Chromium and Firefox
#     ship thin LTO releases) at a fraction of the peak memory cost.
#   - `codegen-units = 1` was forcing rustc to hold the entire `tauri` crate's
#     IR in memory during optimization (>4 GB peak), which overflows on machines
#     with constrained RAM during the link step. 4 units parallelises the work
#     and keeps each unit's footprint manageable while still letting LTO span
#     them at the end.
# The resulting binary is typically within 1-3% of the size you'd get from
# full LTO with codegen-units=1, and noticeably faster to build.
[profile.release]
codegen-units = 4
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true
